# EldenRingModsGui

./: .gitignore  CMakeLists.txt  readme.md
src/: Global.h  main.cpp  main.h  main.hpp  stdafx.h
src/Config/: Config.cpp  Config.h
src/Console/: Console.cpp  Console.h
src/globals/: Globals.cpp  Globals.h
src/hook/: DX12Hook.cpp  DX12Hook.h
src/menu/: Arial.h  menu.cpp  menu.h
